--- a/bibliotheque.html
+++ b/bibliotheque.html
@@ -3,9 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/bibliotheque.css">
     <title>Data Pokemon</title>
 </head>
 <body>
+    <h1>Bienvenue à la Bibliothèque Pokémon</h1>
+    <p>Explorez les données des Pokémon et découvrez leurs caractéristiques uniques!</p>
     
+    <div class="filter-container">
+        <label for="typeFilter">Filtrer par type :</label>
+        <select id="typeFilter">
+            <option value="all">Tous les types</option>
+            <option value="Grass">Plante</option>
+            <option value="Fire">Feu</option>
+            <option value="Water">Eau</option>
+            <option value="Electric">Électrik</option>
+            <option value="Psychic">Psy</option>
+            <option value="Ice">Glace</option>
+            <option value="Dragon">Dragon</option>
+            <option value="Dark">Ténèbres</option>
+            <option value="Fairy">Fée</option>
+            <option value="Poison">Poison</option>
+            <option value="Ground">Sol</option>
+            <option value="Flying">Vol</option>
+            <option value="Bug">Insecte</option>
+            <option value="Rock">Roche</option>
+            <option value="Ghost">Spectre</option>
+            <option value="Steel">Acier</option>
+            <option value="Normal">Normal</option>
+            <option value="Fighting">Combat</option>
+        </select>
+    </div>
+    
+    <div class="bibliotheque">
+        <div class="grid">
+
+        </div>
+    </div>
 </body>
+<script src="./assets/js/bibliotheque.js"></script>
 </html>
