--- a/bibliotheque.html
+++ b/bibliotheque.html
@@ -8,6 +8,16 @@
     <title>Data Pokemon</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="bibliotheque.html">Pokédex</a></li>
+                <li><a href="table.php">Simulation</a></li>
+                <li><a href="game.html">Jouer</a></li>
+            </ul>
+        </nav>
+    </header>
     <h1>Bienvenue à la Bibliothèque Pokémon</h1>
     <h3>Explorez les données des Pokémon et découvrez leurs caractéristiques.</h3>
     
