--- a/game.html
+++ b/game.html
@@ -9,6 +9,16 @@
     <title>Arène Pokémon</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="bibliotheque.html">Pokédex</a></li>
+                <li><a href="table.php">Simulation</a></li>
+                <li><a href="game.html">Jouer</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="game-container">
         <!-- Deck adversaire (en haut) -->
         <div class="bot-deck-area">
