--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Data Pokemon</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="bibliotheque.html">Pokédex</a></li>
+                <li><a href="table.php">Simulation</a></li>
+                <li><a href="game.html">Jouer</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
