--- a/game.html
+++ b/game.html
@@ -103,14 +103,14 @@
             <p>Choisissez votre Pokémon pour commencer!</p>
         </div>
         
-        <!-- Compteurs de cartes -->
+        <!-- Compteurs de manches gagnées -->
         <div id="botCardsCounter" class="cards-counter cards-counter-left">
             <p>Adversaire</p>
-            <span class="counter">9</span>
+            <span class="counter">0</span>
         </div>
         <div id="playerCardsCounter" class="cards-counter cards-counter-right">
-            <p>Vos cartes</p>
-            <span class="counter">9</span>
+            <p>Vos victoires</p>
+            <span class="counter">0</span>
         </div>
     </div>
 </body>
