Récupération de pokémons et ko

--- a/game.html
+++ b/game.html
@@ -103,13 +103,13 @@
             <p>Choisissez votre Pokémon pour commencer!</p>
         </div>
         
-        <!-- Compteurs de manches gagnées -->
+        <!-- Compteurs de Pokémon restants -->
         <div id="botCardsCounter" class="cards-counter cards-counter-left">
-            <p>Adversaire</p>
+            <p>Pokémon adverses</p>
             <span class="counter">0</span>
         </div>
         <div id="playerCardsCounter" class="cards-counter cards-counter-right">
-            <p>Vos victoires</p>
+            <p>Vos Pokémon</p>
             <span class="counter">0</span>
         </div>
     </div>
