--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="bibliotheque.html">Pokédex</a></li>
+                <li><a href="bibliotheque.html">Boutique</a></li>
                 <li><a href="table.php">Simulation</a></li>
                 <li><a href="game.html">Jouer</a></li>
+                <li class="credits-nav">💰 <span class="credits-display">0</span></li>
             </ul>
         </nav>
     </header>
 </body>
+<script src="./assets/js/shop-system.js"></script>
 </html>
