--- a/game.html
+++ b/game.html
@@ -13,6 +13,7 @@
     <!-- Modal de connexion multijoueur -->
     <div id="multiplayerModal" class="modal">
         <div class="modal-content">
+            <button class="close-modal" id="closeModalBtn">&times;</button>
             <h2>🎮 Mode de jeu</h2>
             <div class="modal-body">
                 <div class="first-col">
