--- a/bibliotheque.html
+++ b/bibliotheque.html
@@ -68,6 +68,7 @@
             <select id="sortBy">
                 <option value="type">Type</option>
                 <option value="name">Nom (A-Z)</option>
+                <option value="pokedex">Numéro Pokédex (décroissant)</option>
                 <option value="hp">PV (décroissant)</option>
                 <option value="attack">Attaque (décroissant)</option>
                 <option value="defense">Défense (décroissant)</option>
@@ -80,6 +81,11 @@
 
         </div>
     </div>
+    
+    <!-- Bouton retour en haut -->
+    <button id="scrollToTopBtn" class="scroll-to-top" title="Retour en haut">
+        ⬆️
+    </button>
 </body>
 <script src="./assets/js/shop-system.js"></script>
 <script src="./assets/js/bibliotheque.js"></script>
