--- a/bibliotheque.html
+++ b/bibliotheque.html
@@ -68,7 +68,7 @@
             <select id="sortBy">
                 <option value="type">Type</option>
                 <option value="name">Nom (A-Z)</option>
-                <option value="pokedex">Numéro Pokédex (décroissant)</option>
+                <option value="pokedex">Numéro Pokédex (croissant)</option>
                 <option value="hp">PV (décroissant)</option>
                 <option value="attack">Attaque (décroissant)</option>
                 <option value="defense">Défense (décroissant)</option>
