--- a/game.html
+++ b/game.html
@@ -14,11 +14,11 @@
     <div id="multiplayerModal" class="modal">
         <div class="modal-content">
             <button class="close-modal" id="closeModalBtn">&times;</button>
-            <h2>🎮 Mode de jeu</h2>
+            <h2><img src="./assets/images/icons/poke-ball.png" class="icon-medium" alt="Pokeball">Mode de jeu</h2>
             <div class="modal-body">
                 <div class="first-col">
                     <div id="pokemonCountInfo" class="pokemon-count-info">
-                        <p>📊 <span id="unlockedCount">0</span> Pokémons débloqués</p>
+                        <p><img src="./assets/images/icons/super-ball.png" class="icon-medium" alt="Pokeball"> <span id="unlockedCount">0</span> Pokémons débloqués</p>
                         <p class="info-text">Gagnez des combats pour obtenir des crédits et débloquer de nouveaux Pokémons dans la Boutique !</p>
                     </div>
                     
@@ -32,17 +32,17 @@
                 </div>
                 <div class="game-mode-buttons">
                     <button id="soloBtn" class="mode-btn">
-                        <span class="mode-icon">🤖</span>
+                        <img src="./assets/images/icons/poing-chance.png" class="icon-big" alt="Game Icon">
                         <span class="mode-title">Solo vs Bot</span>
                         <span class="mode-desc">Affrontez l'ordinateur</span>
                     </button>
                     <button id="hostBtn" class="mode-btn">
-                        <span class="mode-icon">🏠</span>
+                        <img src="./assets/images/icons/lettre-pierre-rochard.png" class="icon-big" alt="Game Icon">
                         <span class="mode-title">Créer une partie</span>
                         <span class="mode-desc">Invitez un ami</span>
                     </button>
                     <button id="joinBtn" class="mode-btn">
-                        <span class="mode-icon">🔗</span>
+                        <img src="./assets/images/icons/scanner.png" class="icon-big" alt="Game Icon">
                         <span class="mode-title">Rejoindre</span>
                         <span class="mode-desc">Rejoignez une partie</span>
                     </button>
