connexion, decks et cartes fonctionnels

--- a/deck-builder.html
+++ b/deck-builder.html
@@ -92,6 +92,7 @@
         </div>
     </div>
 </body>
+<script src="./assets/js/config.js"></script>
 <script src="./assets/js/shop-system.js"></script>
 <script src="./assets/js/deck-builder.js"></script>
 </html>
