--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
         </nav>
     </header>
 </body>
+<script src="./assets/js/config.js"></script>
 <script src="./assets/js/shop-system.js"></script>
 </html>
