--- a/bibliotheque.html
+++ b/bibliotheque.html
@@ -81,6 +81,7 @@
         </div>
     </div>
 </body>
+<script src="./assets/js/config.js"></script>
 <script src="./assets/js/shop-system.js"></script>
 <script src="./assets/js/bibliotheque.js"></script>
 </html>
