--- a/bibliotheque.html
+++ b/bibliotheque.html
@@ -16,7 +16,7 @@
                 <li><a href="deck-builder.html">Mes Decks</a></li>
                 <li><a href="table.php">Simulation</a></li>
                 <li><a href="game.html">Jouer</a></li>
-                <li class="credits-nav">💰 <span class="credits-display">0</span></li>
+                <li class="credits-nav"><span class="credits-display">0</span><img src="./assets/images/icons/poke-dollar.png" class="icon-small pokedollar" alt="Pokeball"></li>
                 <li class="user-nav">👤 <span class="username-display"></span></li>
                 <li><button onclick="ShopSystem.logout()" class="logout-btn">Déconnexion</button></li>
             </ul>
