--- a/index.html
+++ b/index.html
@@ -4,27 +4,94 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Pokemon</title>
-    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/accueil.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="nav-links">
-                <a href="index.html">Accueil</a>
-                <a href="bibliotheque.html">Boutique</a>
-                <a href="deck-builder.html">Mes Decks</a>
-                <a href="table.html">Simulation</a>
-                <a href="game.html">Jouer</a>
-            </div>
-            <div class="nav-user">
-                <span class="credits-nav"><span class="credits-display">0</span><img
-                        src="./assets/images/icons/poke-dollar.png" class="icon-small pokedollar" alt="Pokedollar"></span>
-                <span class="user-nav">👤 <span class="username-display"></span></span>
-                <button onclick="ShopSystem.logout()" class="logout-btn">Déconnexion</button>
-            </div>
-        </nav>
-    </header>
+    <div class="main-container">
+        <div class="header">
+            <h1 class="site-title">DATA POKÉMON</h1>
+            <p class="site-description">
+                Votre plateforme complète pour gérer vos cartes Pokémon, créer des decks stratégiques et simuler des combats épiques !
+            </p>
+        </div>
+
+        <div class="nav-container">
+            <a href="bibliotheque.html" class="nav-button">
+                <!-- <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <circle cx="9" cy="21" r="1"></circle>
+                    <circle cx="20" cy="21" r="1"></circle>
+                    <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path>
+                </svg> -->
+                <span class="nav-text">
+                    <svg class="pokeball" viewBox="0 0 100 100" fill="none">
+                        <circle cx="50" cy="50" r="48" fill="#EF4444" stroke="#1F2937" stroke-width="4"/>
+                        <path d="M 10 50 A 40 40 0 0 1 90 50" fill="#EF4444" stroke="#1F2937" stroke-width="4"/>
+                        <path d="M 10 50 A 40 40 0 0 0 90 50" fill="#FFFFFF" stroke="#1F2937" stroke-width="4"/>
+                        <rect x="2" y="46" width="96" height="8" fill="#1F2937"/>
+                        <circle cx="50" cy="50" r="12" fill="#FFFFFF" stroke="#1F2937" stroke-width="4"/>
+                        <circle cx="50" cy="50" r="6" fill="#1F2937"/>
+                    </svg>
+                    Boutique
+                </span>
+            </a>
+
+            <a href="deck-builder.html" class="nav-button">
+                <!-- <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
+                    <line x1="8" y1="21" x2="16" y2="21"></line>
+                    <line x1="12" y1="17" x2="12" y2="21"></line>
+                </svg> -->
+                <span class="nav-text">
+                    <svg class="pokeball" viewBox="0 0 100 100" fill="none">
+                        <circle cx="50" cy="50" r="48" fill="#EF4444" stroke="#1F2937" stroke-width="4"/>
+                        <path d="M 10 50 A 40 40 0 0 1 90 50" fill="#EF4444" stroke="#1F2937" stroke-width="4"/>
+                        <path d="M 10 50 A 40 40 0 0 0 90 50" fill="#FFFFFF" stroke="#1F2937" stroke-width="4"/>
+                        <rect x="2" y="46" width="96" height="8" fill="#1F2937"/>
+                        <circle cx="50" cy="50" r="12" fill="#FFFFFF" stroke="#1F2937" stroke-width="4"/>
+                        <circle cx="50" cy="50" r="6" fill="#1F2937"/>
+                    </svg>
+                    Mes Decks
+                </span>
+            </a>
+
+            <a href="table.php" class="nav-button">
+                <!-- <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <circle cx="12" cy="12" r="10"></circle>
+                    <polygon points="10 8 16 12 10 16 10 8"></polygon>
+                </svg> -->
+                <span class="nav-text">
+                    <svg class="pokeball" viewBox="0 0 100 100" fill="none">
+                        <circle cx="50" cy="50" r="48" fill="#EF4444" stroke="#1F2937" stroke-width="4"/>
+                        <path d="M 10 50 A 40 40 0 0 1 90 50" fill="#EF4444" stroke="#1F2937" stroke-width="4"/>
+                        <path d="M 10 50 A 40 40 0 0 0 90 50" fill="#FFFFFF" stroke="#1F2937" stroke-width="4"/>
+                        <rect x="2" y="46" width="96" height="8" fill="#1F2937"/>
+                        <circle cx="50" cy="50" r="12" fill="#FFFFFF" stroke="#1F2937" stroke-width="4"/>
+                        <circle cx="50" cy="50" r="6" fill="#1F2937"/>
+                    </svg>
+                    Simulation
+                </span>
+            </a>
+
+            <a href="game.html" class="nav-button">
+                <!-- <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <line x1="22" y1="12" x2="2" y2="12"></line>
+                    <path d="M5.45 5.11L2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"></path>
+                    <line x1="6" y1="16" x2="6.01" y2="16"></line>
+                    <line x1="10" y1="16" x2="10.01" y2="16"></line>
+                </svg> -->
+                <span class="nav-text">
+                    <svg class="pokeball" viewBox="0 0 100 100" fill="none">
+                        <circle cx="50" cy="50" r="48" fill="#EF4444" stroke="#1F2937" stroke-width="4"/>
+                        <path d="M 10 50 A 40 40 0 0 1 90 50" fill="#EF4444" stroke="#1F2937" stroke-width="4"/>
+                        <path d="M 10 50 A 40 40 0 0 0 90 50" fill="#FFFFFF" stroke="#1F2937" stroke-width="4"/>
+                        <rect x="2" y="46" width="96" height="8" fill="#1F2937"/>
+                        <circle cx="50" cy="50" r="12" fill="#FFFFFF" stroke="#1F2937" stroke-width="4"/>
+                        <circle cx="50" cy="50" r="6" fill="#1F2937"/>
+                    </svg>
+                    Jouer
+                </span>
+            </a>
+        </div>
+    </div>
 </body>
-<script src="./assets/js/config.js"></script>
-<script src="./assets/js/shop-system.js"></script>
 </html>
