--- a/deck-builder.html
+++ b/deck-builder.html
@@ -11,11 +11,16 @@
 <body>
     <header>
         <nav>
+            <div class="burger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <div class="nav-links">
                 <a href="index.html">Accueil</a>
                 <a href="bibliotheque.html">Boutique</a>
                 <a href="deck-builder.html">Mes Decks</a>
-                <a href="table.html">Simulation</a>
+                <a href="table.php">Simulation</a>
                 <a href="game.html">Jouer</a>
             </div>
             <div class="nav-user">
@@ -95,6 +100,7 @@
         </div>
     </div>
 </body>
+<script src="./assets/js/navbar.js"></script>
 <script src="./assets/js/config.js"></script>
 <script src="./assets/js/shop-system.js"></script>
 <script src="./assets/js/deck-builder.js"></script>
