--- a/game.html
+++ b/game.html
@@ -78,11 +78,16 @@
 
     <header>
         <nav>
+            <div class="burger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <div class="nav-links">
                 <a href="index.html">Accueil</a>
                 <a href="bibliotheque.html">Boutique</a>
                 <a href="deck-builder.html">Mes Decks</a>
-                <a href="table.html">Simulation</a>
+                <a href="table.php">Simulation</a>
                 <a href="game.html">Jouer</a>
             </div>
             <div class="nav-user">
@@ -140,6 +145,7 @@
         </div>
     </div>
 </body>
+<script src="assets/js/navbar.js"></script>
 <script src="assets/js/config.js"></script>
 <script src="assets/js/shop-system.js"></script>
 <script src="assets/js/game.js"></script>
