--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="main-container">
         <div class="header">
-            <h1 class="site-title">DATA POKÉMON</h1>
+            <h1 class="site-title">PokeBattle</h1>
             <p class="site-description">
                 Votre plateforme complète pour gérer vos cartes Pokémon, créer des decks stratégiques et simuler des combats épiques !
             </p>
