--- a/bibliotheque.html
+++ b/bibliotheque.html
@@ -22,7 +22,7 @@
                 <a href="index.html">Accueil</a>
                 <a href="bibliotheque.html">Boutique</a>
                 <a href="deck-builder.html">Mes Decks</a>
-                <a href="table.php">Simulation</a>
+                <a href="table.html">Simulation</a>
                 <a href="game.html">Jouer</a>
             </div>
             <div class="nav-user">
@@ -76,6 +76,15 @@
                 <option value="hp">PV (décroissant)</option>
                 <option value="attack">Attaque (décroissant)</option>
                 <option value="defense">Défense (décroissant)</option>
+            </select>
+        </div>
+
+        <div class="owned-filter-section">
+            <label for="ownershipFilter">Afficher :</label>
+            <select id="ownershipFilter">
+                <option value="all">Tous les Pokémons</option>
+                <option value="owned">Détenus</option>
+                <option value="not-owned">Non-détenus</option>
             </select>
         </div>
     </div>
