--- a/deck-builder.html
+++ b/deck-builder.html
@@ -25,7 +25,7 @@
                 <a href="index.html">Accueil</a>
                 <a href="bibliotheque.html">Boutique</a>
                 <a href="deck-builder.html">Mes Decks</a>
-                <a href="table.php">Simulation</a>
+                <a href="table.html">Simulation</a>
                 <a href="game.html">Jouer</a>
             </div>
             <div class="nav-user">
