--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
             </a>
 
-            <a href="table.php" class="nav-button">
+            <a href="table.html" class="nav-button">
                 <div class="nav-image">
                     <img src="./assets/images/icons/hyperball.svg" alt="pokeball icon" class="pokeball">
                 </div>
