--- a/table.html
+++ b/table.html
@@ -81,5 +81,9 @@
         </div>
     </div>
 </body>
+<script src="assets/js/config.js"></script>
+<script src="assets/js/shop-system.js"></script>
+<script src="assets/js/navbar.js"></script>
+<script src="assets/js/table.js"></script>
 
 </html>
