update text + display

--- a/bibliotheque.html
+++ b/bibliotheque.html
@@ -86,8 +86,8 @@
             <label for="ownershipFilter">Afficher :</label>
             <select id="ownershipFilter">
                 <option value="all">Tous les Pokémons</option>
-                <option value="owned">Détenus</option>
-                <option value="not-owned">Non-détenus</option>
+                <option value="owned">Possédés</option>
+                <option value="not-owned">Non-possédés</option>
             </select>
         </div>
     </div>
